--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "wtr test/**/*.test.ts --node-resolve"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.6",
     "@web/test-runner": "^0.18.0",
     "chai": "^4.3.10",
     "tslib": "^2.6.2",
@@ -16,6 +19,7 @@
     "vite-tsconfig-paths": "^4.2.2"
   },
   "dependencies": {
+    "@open-wc/testing": "^4.0.0",
     "@vaadin/router": "^1.7.5",
     "lit": "^3.1.0",
     "typescript": "^5.3.3"
